-- ---------------------------------------------------------------------------
-- Embeddings — dedicated tables, deliberately not vector columns on
-- profiles/opportunities. See docs/schema-v2-design.md for the full
-- rationale; summary:
--
--  1. Lifecycle: embeddings are (re)generated by a background job whenever
--     source content changes. profiles/opportunities are edited directly by
--     users/curators. Separating them means a re-embed job never touches —
--     or locks — the transactional table.
--  2. Model churn: the embedding model/dimension will change (provider swap,
--     fine-tune, dimension change) on its own schedule. A dedicated table can
--     be dropped and rebuilt without an ALTER on the source table.
--  3. Weight: a 1536-dim vector is ~6KB/row. Every ordinary CRUD scan of
--     profiles/opportunities would otherwise carry that weight for free.
--  4. Index isolation: HNSW has real build/maintenance cost. Keeping it on a
--     narrow table means rebuilding it never contends with writes on the
--     wide, frequently-updated source tables.
--
-- Dimension note: 1536 assumes an OpenAI-family text-embedding model. Lock in
-- the real embedding model before running this migration — pgvector needs a
-- fixed dimension per column, so switching models later means a new column
-- (or table), not an ALTER.
-- ---------------------------------------------------------------------------

create extension if not exists vector;

create table if not exists public.profile_embeddings (
  profile_id uuid primary key references public.profiles (id) on delete cascade,
  embedding vector(1536) not null,
  model text not null,
  model_version text not null,
  source_hash text not null,
  updated_at timestamptz not null default now()
);

comment on column public.profile_embeddings.source_hash is
  'Hash of the text that produced this embedding (skills + interests + '
  'experiences + resume_text). Lets the regeneration job skip profiles that '
  'have not actually changed since their last embed.';

create table if not exists public.opportunity_embeddings (
  opportunity_id uuid primary key references public.opportunities (id) on delete cascade,
  embedding vector(1536) not null,
  model text not null,
  model_version text not null,
  source_hash text not null,
  updated_at timestamptz not null default now()
);

comment on column public.opportunity_embeddings.source_hash is
  'Hash of (title + description + tags + eligible_years + duration). Lets '
  'the ingestion job re-embed only opportunities whose content actually changed.';

-- Cosine distance is the standard choice for normalized text embeddings
-- (OpenAI and most sentence-transformer models). Switch ops class if a
-- future model expects inner product (vector_ip_ops) or L2 (vector_l2_ops).
create index if not exists profile_embeddings_hnsw_idx
  on public.profile_embeddings using hnsw (embedding vector_cosine_ops);

create index if not exists opportunity_embeddings_hnsw_idx
  on public.opportunity_embeddings using hnsw (embedding vector_cosine_ops);
